change a word prior to priorite

--- a/readme
+++ b/readme
@@ -23,6 +23,6 @@ customer can read about our restorant's food and easily place their own order by
 
 * more and enough I did `special weekly offer` for all customers called 'Buy 1 get 1 free'.
 
-* free food tip weekly (fftw) for prior customer.
+* free food tip weekly (fftw) for priorite customer.
 
 * customer can order their food from `our special verieties` tabs were each day has it`s special offer.
