adding 1 line in it

--- a/readme
+++ b/readme
@@ -26,3 +26,5 @@ customer can read about our restorant's food and easily place their own order by
 * free food tip weekly (fftw) for priorite customer.
 
 * customer can order their food from `our special verieties` tabs were each day has it`s special offer.
+
+* THANKS FOR USING OUR SERVICE.
